:sparkles: 커스텀 Image Sprite 적용
- 주석처리되어있음

--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
   width: 35px;
   height: 54px;
   background: url("/images/hero.png") no-repeat;
+  /*
+  width: 35px;
+  height: 33px;
+  background: url("/images/image_sprite.png") no-repeat; 
+  */
   display: inline-block;
 }
 
