--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@
   background-position: -105px 0px;
 }
 
+/* Custom CSS */
+
 body {
   font-size: 30px;
 }
@@ -52,6 +54,7 @@ button {
   border: 0px;
   border-radius: 20px;
   font-size: 30px;
+  font-weight: bold;
 }
 
 table {
@@ -62,20 +65,17 @@ table {
 
 header {
   font-weight: bold;
-}
-
-.header__item {
   width: 800px;
   margin: auto;
 }
 
-.header__item--introduction {
+.header__intro {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.header__item--informations {
+.header__info {
   display: flex;
   justify-content: space-around;
   flex-direction: row;
@@ -83,18 +83,7 @@ header {
   margin: 20px;
 }
 
-.container-main {
+section {
   width: 800px;
   margin: auto;
-}
-
-.container-result {
-  width: 800px;
-  margin: auto;
-}
-
-.container-result__item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
